@@ -342,7 +342,7 @@ ReplSetServers.prototype.allRawConnections = function() {
   // Add all the pool connections
   if(this.readSecondary && this.secondaries.length > 0) {
     for(var i = 0; i < this.secondaries.length; i++) {
-      connections.concat(this.secondaries[i].connection.pool);
+      connections = connections.concat(this.secondaries[i].connection.pool);
     }
   }
   // Return the server connections
